# mochi-python

./: .gitignore  LICENSE  README.md  go.mod  go.sum
abi2026/: doc.go  phase18_test.go  plan.go  plan_test.go  policy.go  policy_test.go  rename.go  rename_test.go  tag.go  tag_test.go
abi3/: audit.go  audit_test.go  doc.go  manylinux.go  manylinux_test.go  phase13_test.go  slim.go  slim_test.go  tag.go  tag_test.go
ast/: ast.go  convert.go  printer.go
asyncbridge/: doc.go  fn.go  fn_test.go  mode.go  mode_test.go  phase12_test.go  render.go  render_test.go
attest/: bundle.go  bundle_test.go  doc.go  fetcher.go  fetcher_test.go  phase15_test.go  policy.go  policy_test.go  report.go  report_test.go  statement.go  statement_test.go  verifier.go  verifier_test.go
diagnostic/: diagnostic.go
emit/: doc.go  phase06_test.go  shim.go  shim_test.go
errors/: errors.go  errors_test.go
freethread/: abi.go  abi_test.go  audit.go  audit_test.go  doc.go  lock.go  lock_test.go  phase17_test.go  support.go  support_test.go
importspec/: doc.go  phase07_test.go  spec.go  spec_test.go
lockfile/: capabilities.go  diff.go  doc.go  entry.go  from_build.go  lockfile_test.go  parse.go  phase09_test.go  render.go
parser/: ast.go  docs.go  erlang_import.go  errors.go  go_import.go  invariants.go  java_import.go  kotlin_import.go  (+4 more)
runtime/python/: pyproject.toml
runtime/python/mochi_runtime/: __init__.py  except_.py  fetch.py  fmt.py  io.py  llm.py  mapping.py  math.py  query.py  stream.py
runtime/python/mochi_runtime/kernel/: __init__.py  __main__.py  mochi_kernel.py
(+488 files in other folders)
